--- a/infrastructure.html
+++ b/infrastructure.html
@@ -37,7 +37,7 @@
     <header-component></header-component>
     <!-- header-end -->
     <!-- slider-start -->
-    <div class="slider-area">
+    <!-- <div class="slider-area">
         <div class="pages-title">
             <div class="single-slider slider-height slider-height-breadcrumb d-flex align-items-center" style="background-image: url(img/bg/others_bg.jpg);">
                 <div class="container">
@@ -57,9 +57,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- slider-end -->
-    <div class="course-details-area gray-bg pt-100">
+    
+    <!-- <div class="course-details-area gray-bg pt-100">
         <div class="container">
             <div class="row">
                 <div class="col-xl-8 col-lg-8">
@@ -248,7 +249,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- brand start -->
     <div class="brand-area pt-80 pt-80 pb-80">
