--- a/about_us.html
+++ b/about_us.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Sikkha</title>
+    <title>Sri Parshwanth bed College</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -64,29 +64,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-7 col-lg-7">
-                    <div class="about-img mb-55">
+                    <!-- <div class="about-img mb-55">
                         <img src="img/about/about_details_left_img.jpg" alt="">
-                    </div>
+                    </div> -->
                     <div class="about-title-section about-title-section-2 mb-30">
-                        <h1>Who We Are</h1>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad miniveniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea consequatur? Quis autem vel eum iure reprehenderit.</p>
+                        <h1>Sri Parshwanth College of Education</h1>
+                        <p>We offer a wide range of opportunities to choose from, and our highly qualified and experienced staffs are always there to provide guidance and help you in your decisions and plan your future career. We have high expectations of our students and towards this direction all our teachers would definitely work for. We ensure you of a friendly and cordial atmosphere. “I hope that the teachers will become role models for the future citizens of the country.”</p>
                     </div>
                 </div>
                 <div class="col-xl-5 col-lg-5">
-                    <div class="about-img mb-55">
+                    <!-- <div class="about-img mb-55">
                         <img src="img/about/about_details_right_img.jpg" alt="">
-                    </div>
+                    </div> -->
                     <div class="about-title-section about-title-section-2 mb-30">
                         <h1>Our MIssion Vission</h1>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptat accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur adipisci velit.</p>
+                        <p>You have embarked upon the noble profession of teaching at a time when the world is going through rapid and profound economic, social, and political transformations based on the emerging ‘Knowledge Economy,’ a system of creating wealth that depends upon the creation and application of new knowledge</p>
                     </div>
                 </div>
             </div>
             <div class="row mt-60">
                 <div class="col-xl-12">
                     <div class="university-banner mb-30">
-                        <img src="img/about/university.jpg" alt="">
+                        <img src="D:\Guru\college data\image//hhhh.jpg" alt="">
+                        
                     </div>
+                    <!-- <div class="university-banner mb-30">
+                        <img src="img/about/university.jpg" alt="">
+                        
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -96,7 +101,7 @@
     <!-- counter start -->
     <!-- counter end -->
     <!-- team start -->
-    <div class="team-area pt-95 pb-70">
+    <!-- <div class="team-area pt-95 pb-70">
         <div class="container">
             <div class="row">
                 <div class="col-xl-6 offset-xl-3 col-lg-8 offset-lg-2 col-md-10 offset-md-1">
@@ -211,10 +216,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- team end -->
     <!-- testimonials start -->
-    <div class="testimonilas-area pt-100 pb-90 gray-bg">
+    <!-- <div class="testimonilas-area pt-100 pb-90 gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-xl-6 offset-xl-3 col-lg-8 offset-lg-2 col-md-10 offset-md-1">
@@ -333,7 +338,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- testimonials end -->
     <!-- brand start -->
     <div class="brand-area pt-80 pt-80 pb-80">
